# giim

./: CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py
configs/: breastdm.yaml  default.yaml  liver_ct.yaml  vin_dr_mammo.yaml
docs/: architecture.md  datasets.md
examples/: README.md  custom_dataset_example.py  quick_start.py
giim/: __init__.py  dataset_loader.py  evaluation.py  feature_extractor.py  giim_model.py  graph_builder.py  trainer.py  utils.py
scripts/: __init__.py  evaluate.py  preprocess_data.py  train.py
tests/: __init__.py  test_giim_model.py  test_graph_builder.py
